# rust-studies

crash-course-2/clippy/: Cargo.toml
crash-course-2/clippy/src/: main.rs
crash-course-2/closures_iterators/: cargo.toml
crash-course-2/closures_iterators/src/: main.rs
crash-course-2/documentation/: Cargo.toml
crash-course-2/documentation/src/: lib.rs
crash-course-2/traits/src/: main.rs
crash-course/01_intro_and_variables/: Cargo.toml  Readme..md
crash-course/01_intro_and_variables/src/: main.rs
crash-course/02_functions_modules/: Cargo.toml
crash-course/02_functions_modules/src/: main.rs
crash-course/03_simple_types/: cargo.toml
crash-course/03_simple_types/src/: main.rs
crash-course/04_flow_control_strings/: cargo.toml
crash-course/04_flow_control_strings/src/: main.rs
crash-course/05_ownership_borrowing/: Cargo.toml
crash-course/05_ownership_borrowing/src/: main.rs
crash-course/07_collections/: Cargo.toml
crash-course/08_closures_threads/: Cargo.toml
crash-course/09_space_invaders/: Cargo.toml
feature_toggles/: Cargo.toml  docker-compose.yaml
feature_toggles/src/: feature_manager.rs  feature_toggles.rs  lib.rs  mysql_feature_manager.rs
feature_toggles/tests/: mysql_feature_manager_integration_tests.rs
simple-web-api/: .env  Cargo.toml
simple-web-api/src/: change_log.rs  configurations.rs  main.rs
simple-web-api/tests/: change_log_tests.rs
terminal_gpt/: Cargo.toml
terminal_gpt/src/: main.rs
transactions_api/: Cargo.toml  Config.toml
transactions_api/src/: main.rs  transaction.rs
(+11 files in other folders)
