[package]
name = "feature_toggles"
version = "0.1.0"
edition = "2021"

[lib]
name = "feature_toggles"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql_feature_manager = []

[dependencies]
config = "0.13.4"
mysql = "24.0.0"
